===============================================
Changes for Lovelysystems Elasticsearch Plugins
===============================================

2012/08/12 0.4.2
================

 - fix cast exception in distinct date histogram


2012/08/12 0.4.1
================

 - fix stream handling in distinct date histogram

2012/08/11 0.4.0
================

 - added Long type support to distinct date histogram facet

2012/06/29 0.3.1
================

 - added "total" field to latest facet, which contains the number of
   distinct keys seen.

 - bugfix: error when start is greater than number of results in
   latest facet

2012/06/27 0.3.0
================

 - added "Latest" facet

 - elasticsearch 0.19.x compatibility