@@ -2,6 +2,8 @@
 Changes for Lovelysystems Elasticsearch Plugins
 ===============================================
 
+ - added Long type support to latest facet
+
 2012/08/12 0.4.2
 ================
 
